<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pixelink_ros2</name>
  <version>0.0.0</version>
  <description>Pixelink API to ROS2 interface</description>
  <maintainer email="support@pixelink.com">Pixelink Support</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pixelink_ros2_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>image_transport</exec_depend>
  <exec_depend>std_msgs</exec_depend>  
  



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
